tests/fixtures/invalid/min_str_none.py
# Cannot call min() with Str, None
x = min("hello", None)
